--- a/blog-blog/src/main/resources/application.yml
+++ b/blog-blog/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
       max-file-size: 20MB
       # HTTP请求中包含的所有文件的总大小的最大允许值
       max-request-size: 20MB
+  redis:
+    host: localhost
+    port: 6379
+#    password: 123456
 
 mybatis-plus:
   configuration:
